fix: solved background image bug on safari

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -12,12 +12,12 @@
 #opening-section-background {
     position: fixed;
     top: 70px;
-    left: 0;
     z-index: -1;
     opacity: 0.3;
     filter: brightness(60%);
-    width: 100%;
-    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    aspect-ratio: 3/2;
     object-fit: cover;
 }
 
